--- a/archi-landing-page/index.html
+++ b/archi-landing-page/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/favIcon.svg" />
+    <link rel="icon" type="ico" href="/public/fav-archi.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta  name="descripcion" content="marketing digital para arquitectos">
     <meta name="autor" content="Archi growth">
@@ -14,11 +14,6 @@
       href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Dosis:wght@200..800&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <!--BOOTSTRAP-->
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-  />
   </head>
   <body>
     <div id="root"></div>
