--- a/archi-landing-page/index.html
+++ b/archi-landing-page/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="ico" href="/public/fav-archi.ico" />
+    <link rel="icon" type="png" href="/public/fav-achi.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta  name="descripcion" content="marketing digital para arquitectos">
-    <meta name="autor" content="Archi growth">
-    <title>Archi growth</title>
+    <meta name="IvanLMdev" content="Archi growth" />
+
+    <!-- Meta Tags Básicas para SEO -->
+    <meta
+      name="description"
+      content="ArchiGrowth: Marketing y publicidad especializada para arquitectos, constructores e interioristas. Atraé más proyectos con estrategias digitales efectivas."
+    />
+    <meta
+      name="keywords"
+      content="marketing para arquitectos, publicidad para constructores, estrategias digitales, anuncios para interioristas, ArchiGrowth"
+    />
+    <meta name="author" content="ArchiGrowth" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Meta Tags para Redes Sociales (Open Graph y Twitter Cards) -->
+    <meta
+      property="og:title"
+      content="ArchiGrowth - Marketing para Arquitectos, Constructores e Interioristas"
+    />
+    <meta
+      property="og:description"
+      content="Publicidad digital especializada para potenciar tu estudio. Más visibilidad, más proyectos."
+    />
+    <meta
+      property="og:image"
+      content="https://archigrowth.lat/imagen/img.png"
+    />
+    <meta property="og:url" content="https://archigrowth.lat" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="ArchiGrowth - Marketing para Arquitectos"
+    />
+    <meta
+      name="twitter:description"
+      content="Anuncios y estrategias digitales para arquitectos y constructores."
+    />
+    <meta
+      name="twitter:image"
+      content="https://archigrowth.lat/imagen/img.png"
+    />
+
+    <!-- Meta Tags Técnicas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Meta Tags SEO Adicionales -->
+    <meta http-equiv="Content-Language" content="es" />
+    <link rel="canonical" href="https://archigrowth.lat" />
+    <meta
+      name="googlebot"
+      content="max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+    />
+    <meta
+      http-equiv="cache-control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta name="revised" content="2024-02-26" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <title>ArchiGrowth</title>
     <!--FONT GOOLGLE-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
